# OSS-13

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  GasProject.sln  LICENSE  OSS13.sln  README.md  Проект1.sln
GasProject Client/: CMakeLists.txt  Client.cpp  Client.hpp  GasProject Client.vcxproj  GasProject Client.vcxproj.filters  Graphics.cpp  LibraryPaths_Example.props  Network.cpp  Network.hpp  Sprite.hpp  State.cpp  State.hpp  TileGrid.cpp  TileGrid.hpp  UI.cpp  UI.hpp  Window.hpp  network.hpp
GasProject Client/Images/: Thumbs.db
GasProject Client/Sources/: Client.cpp  Client.hpp  Global.cpp  Network.cpp  Network.hpp  ResourceManager.cpp  ResourceManager.hpp  State.cpp  State.hpp
GasProject Client/Sources/Graphics/: Chat.cpp  Chat.hpp  Graphics.cpp  Sprite.cpp  Sprite.hpp  SpriteFactory.cpp  SpriteInfo.h  Texture.cpp  Texture.hpp  TextureHolder.cpp  TileGrid.hpp  Widget.hpp  Window.cpp  Window.hpp
GasProject Client/Sources/Graphics/TileGrid/: Block.cpp  Block.hpp  Light.h  Object.cpp  Object.hpp  Tile.cpp  Tile.hpp  TileGrid.cpp  TileGrid.hpp
GasProject Client/Sources/Graphics/UI/: AuthUI.cpp  AuthUI.hpp  GameListUI.cpp  GameListUI.hpp  GameProcessUI.cpp  GameProcessUI.hpp  Style.cpp  UI.cpp  UI.hpp  UIModules.hpp
GasProject Server/: CMakeLists.txt  GasProject Server.vcxproj  GasProject Server.vcxproj.filters  LibraryPaths_Example.props  Server.cpp  Server.hpp  UsersDB  World.cpp  World.hpp  net_const.hpp  network.cpp  network.hpp  player.cpp  player.hpp  usersDB  users_database.cpp
GasProject Server/Include/: IGame.h  IScriptEngine.h  IServer.h
GasProject Server/Sources/: DelayedActivitiesManager.h  Game.cpp  Game.h  Global.hpp  Player.cpp  Player.hpp  PlayerCommand.cpp  PlayerCommand.hpp  ResourceManager.cpp  ResourceManager.hpp  Server.cpp  Server.hpp  VerbHolder.cpp  VerbsHolder.h  player.hpp
GasProject Server/Sources/ClientUI/: WelcomeWindowSink.cpp  WelcomeWindowSink.h  WindowSink.cpp  WindowSink.h
GasProject Server/Sources/Database/: UsersDB.cpp  UsersDB.hpp
GasProject Server/Sources/Network/: Connection.hpp  Differences.cpp  Differences.hpp  NetworkController.cpp  NetworkController.hpp  Packing.cpp  TileGrid_Info.hpp  network.cpp  network.hpp
GasProject Server/Sources/Resources/: IconInfo.h  ResourceManager.cpp  ResourceManager.hpp
GasProject Server/Sources/ScriptEngine/: ScriptEngine.cpp  ScriptEngine.h
GasProject Server/Sources/ScriptEngine/Trampoline/: PyComponent.h  PyObject.h
GasProject Server/Sources/Scripts/: LuaManager.cpp  LuaManager.h  LuaObject.cpp  LuaObject.h  LuaObject.h.gch
GasProject Server/Sources/World/: Block.cpp  Block.hpp  Camera.cpp  Camera.hpp  Controllable.hpp  Map.cpp  Map.hpp  Objects.hpp  Tile.cpp  Tile.hpp  World.cpp  World.hpp
GasProject Server/Sources/World/Atmos/: Atmos.cpp  Atmos.hpp  AtmosCameraOverlay.cpp  AtmosCameraOverlay.h  AtmosOverlayWindowSink.cpp  AtmosOverlayWindowSink.h  Locale.cpp  Locale.hpp
GasProject Server/Sources/World/Camera/: Camera.cpp  Camera.hpp  ICameraOverlay.h
GasProject Server/Sources/World/Objects/: Component.cpp  Component.hpp  Control.cpp  Control.hpp  CreateObject.h  Creature.cpp  Creature.hpp  Ghost.cpp  Ghost.hpp  Human.cpp  Human.hpp  Item.cpp  Item.hpp  Mob.cpp  Mob.hpp  Object.cpp  Object.hpp  ObjectHolder.cpp  ObjectHolder.h  Projectile.cpp  Projectile.hpp  Taser.cpp  Taser.hpp  Turf.cpp  Turf.hpp  Turfs.hpp
OSS13 Client/: CMakeLists.txt  OSS13 Client.exe.manifest  OSS13 Client.vcxproj  OSS13 Client.vcxproj.filters
OSS13 Client/Sources/: Client.cpp  Client.hpp  Network.cpp  Network.hpp  ResourceManager.cpp  ResourceManager.hpp
OSS13 Client/Sources/Browser/: Browser.h  BrowserController.h  BrowserControllerHandlers.cpp  BrowserControllerHandlers.h  BrowserControllerImpl.cpp  BrowserControllerImpl.h  BrowserHandlerImpl.cpp  BrowserHandlerImpl.h  BrowserImpl.cpp  BrowserImpl.h  BrowserUI.h
OSS13 Client/Sources/Graphics/: Sprite.cpp  Sprite.hpp  SpriteFactory.cpp  SpriteFactory.h  SpriteInfo.h  Texture.cpp  Texture.hpp  TextureHolder.cpp  TextureHolder.h  TileGrid.hpp  Window.cpp  Window.hpp
OSS13 Client/Sources/Graphics/TileGrid/: ControlUI.cpp  ControlUI.h  Object.cpp  Object.hpp  Tile.cpp  Tile.hpp  TileGrid.cpp  TileGrid.hpp
OSS13 Client/Sources/Network/: Connection.cpp  Connection.h  SyncCommandsProcessor.cpp  SyncCommandsProcessor.h
OSS13 Client/browser_subprocess/: browser_subprocess.vcxproj  browser_subprocess.vcxproj.filters  main.cpp
OSS13 Server/: CMakeLists.txt  OSS13 Server.vcxproj  OSS13 Server.vcxproj.filters
OSS13 Server/Include/: IScriptEngine.h  IServer.h  IVerbsHolder.h
OSS13 Server/Include/Algorithms/: Graph.h
OSS13 Server/Include/World/: ISubsystem.h  ITile.h
OSS13 Server/Sources/: Chat.h  DelayedActivitiesManager.cpp  Game.cpp  Game.h  Player.cpp  Player.hpp  PlayerCommand.cpp  PlayerCommand.hpp  Server.cpp  Server.hpp  VerbsHolder.cpp
OSS13 Server/Sources/ClientUI/: WindowSink.cpp
OSS13 Server/Sources/Database/: UsersDB.cpp
OSS13 Server/Sources/Network/: NetworkController.cpp  NetworkController.hpp
OSS13 Server/Sources/Player/: Player.cpp  Player.h  PlayerCommandsProcessor.cpp  PlayerCommandsProcessor.h
OSS13 Server/Sources/Resources/: IconInfo.h  ResourceManager.cpp  ResourceManager.hpp
OSS13 Server/Sources/ScriptEngine/: ObjectType.cpp  ObjectType.h  ScriptEngine.cpp  ScriptEngine.h
OSS13 Server/Sources/World/: Map.cpp  Map.hpp  Objects.hpp  Tile.cpp  Tile.hpp  World.cpp  World.hpp
SharedLibrary/: CMakeLists.txt  SharedLibrary.vcxproj  SharedLibrary.vcxproj.filters
SharedLibrary/Sources/Shared/: Array.cpp  Array.hpp  CRC32.h  Command.cpp  Command.hpp  ConfigController.cpp  ConfigController.h  ErrorHandling.h  Geometry.hpp  Global.hpp  Grid.hpp  Grid.inl  Log.cpp  Log.h  Log.hpp  Math.hpp  OS.cpp  OS.hpp  Range.hpp  ThreadSafeQueue.hpp  TileGrid_Info.hpp  Timer.cpp  Timer.h  Types.hpp  inja.hpp
SharedLibrary/Tests/: CMakeLists.txt  SharedLibrary_Test.vcxproj  SharedLibrary_Test.vcxproj.filters
SharedLibrary/Tests/Sources/: MovePhysics_Tests.cpp  Syncable_Tests.cpp  main.cpp
(+1088 files in other folders)
